# aioscraper

./: .flake8  .gitignore  .pre-commit-config.yaml  .pytest.toml  .readthedocs.yaml  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  requirements_dev.txt  run.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
aioscraper/: __init__.py  config.py  env_parser.py  exceptions.py  helpers.py
aioscraper/_helpers/: asyncio.py  func.py  http.py  module.py
aioscraper/cli/: __main__.py  _args.py  _config.py  _entrypoint.py  exceptions.py
aioscraper/config/: __init__.py  env.py  field_validators.py  loader.py  model_validator.py  models.py
aioscraper/core/: __init__.py  executor.py  pipeline.py  rate_limiter.py  request_manager.py  runner.py  scraper.py
aioscraper/holders/: middleware.py  pipeline.py
aioscraper/middlewares/: retry.py
aioscraper/pipeline/: __init__.py  base.py  dispatcher.py
aioscraper/scraper/: __init__.py  core.py  executor.py  pipeline.py  request_manager.py  runner.py  scraper.py
docs/: api.rst  benchmarks.rst  changelog.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  overview.rst  quickstart.rst  requirements.txt
examples/: adaptive_rate_limiting.py  basic.py  github_repos.py  queue_consumer.py  quotes.py
tests/: conftest.py  test_adaptive_rate_limiter.py  test_cli_entrypoint.py  test_deps.py  test_error.py  test_http_helpers.py  test_middleware.py  test_pipeline.py  test_priority.py  test_rate_limiter.py  test_request_exception_middleware.py  test_request_manager.py  test_request_middleware.py  test_response_middleware.py  test_runner.py  test_success.py
(+53 files in other folders)
