[project]
name = "aioscraper"
version = "0.10.1"
authors = [{ name = "darkstussy" }, ]
description = "Async framework for building modular and scalable web scrapers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiojobs~=1.4.0",
    "yarl~=1.22.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/darkstussy/aioscraper"
Issues = "https://github.com/darkstussy/aioscraper/issues"

[project.optional-dependencies]
uvloop = [
    "uvloop~=0.22.1"
]
aiohttp = [
    "aiohttp[speedups]~=3.13.2",
]
httpx = [
    "httpx~=0.28.1",
]
dev = [
    "flake8~=7.3.0",
    "black~=25.11.0",
    "pyright~=1.1.407",
]
test = [
    "pytest~=9.0.1",
    "pytest-asyncio~=1.3.0",
]

[project.scripts]
aioscraper = "aioscraper.cli:main"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
    /(
        \.eggs/|
        \.git/|
        \.hg/|
        \.mypy_cache/|
        \.tox/|
        \.venv/|
        \venv/|
        _build/|
        buck-out/|
        build/|
        dist/
    )'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "function"